--- a/pjt/templates/root.html
+++ b/pjt/templates/root.html
@@ -9,10 +9,10 @@
                 <img src="{% static 'images/carousel_1.jpg' %}" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'images/carousel_2.jpg' %}"  class="d-block w-100" alt="...">
+                <img src="{% static 'images/carousel_2.jpg' %}" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'images/carousel_3.jpg' %}"  class="d-block w-100" alt="...">
+                <img src="{% static 'images/carousel_3.jpg' %}" class="d-block w-100" alt="...">
             </div>
             <div class="box">
                 <ul class="box_inner">
@@ -43,7 +43,8 @@
 </div>
 
 <div class="row text-center mt-5">
-    <h1>맛집 연방수사국에 오신 것을 환영합니다!</h1>
+    <h1><img src="../../static/images/food_box.jpg" style="width:10%; background-color: white;">맛집 연방수사국에 오신 것을 환영합니다!
+    </h1>
     {% if user.is_authenticated %}
     <!-- 로그인 상태라면 작동하는 코드 -->
     <div>
